# widgets

./: CMakeLists.txt  README.md
demo/: BuilderWidget.h  CMakeLists.txt  CompactVectorEntry.h  FloatEntry.h  FloatView.h  TemplateWidget.h  VectorEntry.h  VectorView.h  main.cpp
demo-c/: CMakeLists.txt  main.c
resources/: demo.blp  demo_2.blp  demobutton.blp  gresource.xml.in  vectorentry.blp  vectorview.blp
